更新生成狼的测试beta
使用/callPet命令即可生成一条属于自己的狼

--- a/AIPetTest/src/main/resources/plugin.yml
+++ b/AIPetTest/src/main/resources/plugin.yml
@@ -1,3 +1,10 @@
 name: AIPetTest
 version: 1.0
 main: aitest.aipettest.AIPetTest
+
+commands:
+  callPet:
+    description: 召唤你的宠物
+    usage: /callPet
+    permission: AIPetTest.callPet
+    permission-message: 您没有权限
